pkg/story/testdata/negative/spec_ref_on_helper.story
Meta
    Name:      Spec-Ref On Helper Fixture
    Id:        spec_ref_on_helper_fixture
    Spec-Ref:  OCPP 2.0.1 §B01 BootNotification
    Tags:      helper
    Stations:  1

Scenario: Dummy scenario
    When  something happens
    Then  something is verified
